# CRIP

./: .env.example  .gitignore  Makefile  README.md  crip_implementation.docx  crip_requirements.docx  docker-compose.yml
.claude/agent-memory/senior-engineer/: MEMORY.md  project_ts_env_issue.md
docs/superpowers/plans/: 2026-03-30-frontend.md
docs/superpowers/specs/: 2026-03-30-frontend-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx
frontend/src/components/layout/: Navbar.tsx  PageWrapper.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ErrorBanner.tsx  Spinner.tsx
frontend/src/features/analyst/: AnalystPage.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/src/lib/: dashboardApi.ts  personaApi.ts  reasoningApi.ts  wsClient.ts
frontend/src/store/: themeStore.ts
frontend/src/tests/: AnalystPage.test.tsx  FindingsTable.test.tsx  GenerateReportButton.test.tsx  PersonasPage.test.tsx  PostureCard.test.tsx  ThreatHeatmap.test.tsx  dashboardApi.test.ts  personaApi.test.ts  themeStore.test.ts
frontend/src/types/: index.ts
services/dashboard/: pyproject.toml
services/dashboard/app/: config.py  main.py
services/dashboard/app/metrics/: risk_score.py
services/dashboard/app/routes/: dashboard.py  reports.py
services/ingestion/: pyproject.toml
services/ingestion/app/: config.py  main.py
services/persona/: pyproject.toml
services/persona/app/: config.py  main.py
services/reasoning/: pyproject.toml
services/reasoning/app/: config.py  main.py
services/reasoning/app/llm/: client.py  prompts.py
services/reasoning/app/rag/: confidence.py  context.py  graph_queries.py  intent.py  pipeline.py
services/reasoning/app/routes/: query.py  ws.py
shared/: pyproject.toml
shared/crip_shared/: graph.py  middleware.py  schemas.py
(+19 files in other folders)
