[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends.build"

[project]
name = "crip-reasoning"
version = "0.1.0"
description = "CRIP Reasoning Service — RAG pipeline with Claude"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.0",
    "anthropic>=0.30",
    "boto3>=1.34",
    "crip-shared @ file:///${PROJECT_ROOT}/../../../shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx",
]

[tool.hatch.metadata]
allow-direct-references = true
